Detalles finales finales(tabla y dinamismo)

--- a/index.html
+++ b/index.html
@@ -58,31 +58,55 @@
         </section>
 
     <div class="fila">
-    <section id="experiencia">
+
+        <section id="experiencia">
         <h2>Experiencia</h2>
-        <ul>
-            <li><strong>Banco de Guayaquil (2024 - Actualidad)</strong> – Desarrollador Fullstack en el área de comercio.
-                <ul>
-                    <li>Desarrollo de soluciones internas utilizando tecnologías modernas (React, Node.js, SQL).</li>
-                    <li>Integración de sistemas y mantenimiento de flujos críticos de negocio.</li>
-                </ul>
-            </li>
-            <li><strong>GTSI ESPOL (2024 Marzo - 2024 Mayo)</strong> – Implementación de módulo Helpdesk (Odoo).
-                <ul>
-                    <li>Automatización de soporte con sistema de tickets.</li>
-                    <li>Mejora de procesos de atención en la universidad.</li>
-                </ul>
-            </li>
-            <li><strong>Idiomas</strong>
-                <ul>
-                    <li>Español: Nativo</li>
-                    <li>Inglés: Nivel Alto</li>
-                    <li>Alemán: Nivel Medio</li>
-                </ul>
-            </li>
-                                
-        </ul>
-    </section>
+        <table class="tabla-experiencia">
+            <thead>
+            <tr>
+                <th>Periodo</th>
+                <th>Empresa</th>
+                <th>Cargo</th>
+                <th>Descripción</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td>2024 - Actualidad</td>
+                <td>Banco de Guayaquil</td>
+                <td>Desarrollador Fullstack</td>
+                <td>
+                Desarrollo de soluciones internas utilizando tecnologías modernas (React, Node.js, SQL).<br>
+                Integración de sistemas y mantenimiento de flujos críticos de negocio.
+                </td>
+            </tr>
+            <tr>
+                <td>Marzo - Mayo 2024</td>
+                <td>GTSI ESPOL</td>
+                <td>Implementación de módulo Helpdesk (Odoo)</td>
+                <td>
+                Automatización de soporte con sistema de tickets.<br>
+                Mejora de procesos de atención en la universidad.
+                </td>
+            </tr>
+            </tbody>
+        </table>
+
+        <h3>Idiomas</h3>
+        <table class="tabla-idiomas">
+            <thead>
+            <tr>
+                <th>Idioma</th>
+                <th>Nivel</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr><td>Español</td><td>Nativo</td></tr>
+            <tr><td>Inglés</td><td>Alto</td></tr>
+            <tr><td>Alemán</td><td>Medio</td></tr>
+            </tbody>
+        </table>
+        </section>
 
             <section id="proyectos">
                 <h2>Proyectos</h2>
